--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeApp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".HabitInfo"
+            android:exported="false" />
         <activity
             android:name=".HistoryActivity"
             android:exported="false" />
@@ -36,19 +39,19 @@
             android:exported="false" />
         <activity
             android:name=".AccInfoActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ChangePassword"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ForgetPasswordActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Schedule"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
